# elf2vkp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  elf2vkp.rb
.github/workflows/: ci.yml  cl.yml
debian/: changelog  control
obs/: PKGBUILD  debian.dsc  elf2vkp.spec
src/: main.cpp  main.h
tools/: build_win.sh
